# extract-frames

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
extract_frames/: main.py
