[metadata]
name = extract_frames
version = 1.0.0
description = Extract frames from video as .jpg image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gurrutia/extract-frames
author = Gerardo Urrutia
author_email = durru7@jmac.com
license = MIT License

[options]
packages = find:
install_requires =
    opencv-python>=4.6.0.66
    tqdm>=4.64.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    extract-frames=extract_frames.main:main